tests/fixtures/errors/valid/src/Admin.elm
module App exposing (main)

import Html


main =
    Html.text "Admin"
